package power;
message loginfo
{
	required string log_name=1;
	required bytes log_content=2;
	required int32 log_len=3;
}
